Update README and docs

--- a/docs/cn/系统架构/测试用例.md
+++ b/docs/cn/系统架构/测试用例.md
@@ -29,10 +29,31 @@ curl -LsSf https://get.nexte.st/latest/mac | tar zxf - -C ${CARGO_HOME:-~/.cargo
 curl -LsSf https://get.nexte.st/latest/windows-tar | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
 ```
 
-## 运行集成测试
-在项目根目录运行所有测试用例
+## 运行测试
 
-```
-make test
-```
+在根目录输入相应的make指令
+
+- 单元测试
+
+  所有测试单元测试用例
+  ```
+  make test
+  ```
+
+- 集成测试
+
+  MQTT Broker:
+  ```
+  make mqtt-ig-test
+  ```
+
+  Placement Center:
+  ```
+  make place-ig-test
+  ```
+
+  Journal Engine:
+  ```
+  make journal-ig-test
+  ```
 
