--- a/docs/cn/贡献指南/环境搭建.md
+++ b/docs/cn/贡献指南/环境搭建.md
@@ -3,6 +3,13 @@
 - 安装 Rust 基础环境
 参考文档：https://course.rs/first-try/installation.html
 
+- Rust 版本
+目前依赖的rust 版本是：nightly-2024-11-08
+```
+- rustup install nightly-2024-11-08
+- rustup default nightly-2024-11-08
+- rustc --version
+```
 - 安装 Cmake.
 mac 安装命令如下：
 ```
@@ -24,3 +31,4 @@ mac 安装命令如下：
 ```
 brew install protobuf
 ```
+
