--- a/docs/blog/01.md
+++ b/docs/blog/01.md
@@ -1,14 +1,5 @@
 # RobustMQ: 用 Rust 构建的新一代分布式消息队列
-
-在数字化时代，**消息队列（MQ）** 已经成为企业系统和互联网平台的核心基础设施。
-
-它像一条看不见的高速公路，将 **订单、支付、消息推送、日志流转、物联网数据** …… 在不同系统之间高效传递。
-
-从 **Kafka** 的大数据处理，到 **RabbitMQ** 的企业集成，再到 **RocketMQ** 在金融交易中的应用，MQ 已经深入支撑着我们的业务世界。
-
-但是，随着业务规模和技术环境的快速变化，**传统 MQ 正在遇到瓶颈**。
-
----
+在数字化时代，**消息队列（MQ）** 已经成为企业系统和互联网平台的核心基础设施。它像一条看不见的高速公路，将 **订单、支付、消息推送、日志流转、物联网数据** …… 在不同系统之间高效传递。从 **Kafka** 的大数据处理，到 **RabbitMQ** 的企业集成，再到 **RocketMQ** 在金融交易中的应用，MQ 已经深入支撑着我们的业务世界。但是，随着业务规模和技术环境的快速变化，**传统 MQ 正在遇到瓶颈**。
 
 ## 为什么需要新一代 MQ？
 
