--- a/docs/en/Blogs/01.md
+++ b/docs/en/Blogs/01.md
@@ -1,7 +1,7 @@
 # RobustMQ: Redefining the Future of Cloud-Native Message Queues with Rust
 
 <p align="center">
-  <img src="../images/robustmq-logo.png" alt="RobustMQ Logo" width="300">
+  <img src="../../images/robustmq-logo.png" alt="RobustMQ Logo" width="300">
 </p>
 
 > In this data-driven era, message queues have become the "nervous system" of modern application architectures. From microservice communication to real-time data stream processing, from IoT devices to AI systems, message queues are everywhere. But as business complexity grows exponentially, traditional message queues are facing unprecedented challenges. It's time to rethink this field with a completely new perspective.
@@ -240,7 +240,7 @@ We welcome all forms of participation: code contributions, documentation improve
 - 💬 **WeChat Group**: Scan QR code to join Chinese community
 
 <div align="center">
-  <img src="../images/wechat-group.jpg" alt="WeChat Group" width="200">
+  <img src="../../images/wechat-group.jpg" alt="WeChat Group" width="200">
 </div>
 
 ---
