--- a/docs/zh/Blogs/01.md
+++ b/docs/zh/Blogs/01.md
@@ -1,7 +1,7 @@
 # RobustMQ：用 Rust 重新定义云原生消息队列的未来
 
 <p align="center">
-  <img src="../images/robustmq-logo.png" alt="RobustMQ Logo" width="300">
+  <img src="../../images/robustmq-logo.png" alt="RobustMQ Logo" width="300">
 </p>
 
 > 在这个数据驱动的时代，消息队列已经成为现代应用架构的"神经系统"。从微服务通信到实时数据流处理，从物联网设备到AI系统，消息队列无处不在。但随着业务复杂度的指数级增长，传统消息队列正面临前所未有的挑战。是时候用全新的思维来重新审视这个领域了。
@@ -240,7 +240,7 @@ RobustMQ的成功离不开社区的力量。我们诚挚邀请你成为这个激
 - 💬 **微信群**: 扫描二维码加入中文社区
 
 <div align="center">
-  <img src="../images/wechat-group.jpg" alt="微信群" width="200">
+  <img src="../../images/wechat-group.jpg" alt="微信群" width="200">
 </div>
 
 ---
