--- a/docs/zh/Blogs/02.md
+++ b/docs/zh/Blogs/02.md
@@ -2,23 +2,24 @@
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
 
-在[《RobustMQ：用 Rust 重新定义云原生消息队列的未来》](01.md)中我们定义了RobustMQ 有六个特点：高性能、Serverless、插件式存储、极简高内聚架构、 计算/存储/调度分离、多协议、。这六个特点就是 RobustMQ 希望成为新一代高性能多协议消息队列的核心技术理念。
+在[《RobustMQ：用 Rust 重新定义云原生消息队列的未来》](01.md)中我们定义了RobustMQ 有六个特点：高性能、Serverless、插件式存储、极简高内聚架构、 计算/存储/调度分离、多协议。
 
-本文我们将阐述 RobustMQ 的技术设计理念和思考。
+整体来看，这六个特点就是 RobustMQ 希望成为新一代高性能多协议消息队列的核心技术理念。接下来我们将展开说明我们针对这六个特点的思考过程。
 
-> 从架构设计理念上，RobustMQ 吸收参考了当前业界主流消息队列、主流基础设施软件（比如数据库、分布式存储）的优势和缺陷。结合对消息中间件业务使用的理解。站在巨人的肩膀思考，希望打造一个能满足各种场景的优秀的开源消息队列产品。因此本文只代表现阶段的架构设计总结。长期来看，架构会不断的演进和更新。 
+> 从架构设计理念上，RobustMQ 吸收参考了当前业界主流消息队列、主流基础设施软件（比如数据库、分布式存储）的优势和缺陷。结合对消息中间件业务使用的理解，希望打造一个能满足各种场景的开源消息队列产品。因此本文只代表现阶段的架构设计总结。长期来看，架构会不断的演进和更新。 
 
+在 RobustMQ 设计之初，第一个关键词是高性能。目前主流消息队列都是用Java 构建，Java 相比其他语言在GC停顿、语言性能层面确实相比C/C++会有降低。因此业界也有很多消息队列试图基于C++来实现，做的比较好的产品是RedPanda。
 
-在 RobustMQ 设计之初，第一个关键词是高性能。目前主流消息队列都是用Java 构建，Java 相比其他语言，GC停顿、语言性能确实相比C或C++会有降低。因此业界也有很多消息队列试图基于C++构建来提升性能，做的比较好的产品是RedPanda。我们也使用C++构建过消息队列，但是因为C++的开发效率，内存泄漏等安全风险，导致项目成熟周期太长，最后没有一个好的结果。而rust的出现，让我们看到了曙光。从业界实践来看，我们认为从性能、开发效率、安全风险等角度来看，可以解决我们之前用C++构建时遇到的问题，且性能上会有显著提升。
+RobustMQ 的开发者曾经也使用过C++构建消息队列，但是因为C++的开发效率，内存泄漏等安全风险，导致项目成熟周期太长，导致最终不是特别理想。 而 rust 的出现，让我们看到了曙光。从业界实践来看，我们认为从性能、开发效率、安全风险等角度来看，可以解决我们之前用C++开发时遇到的问题，且性能上会有显著提升。
 
-因此，RobustMQ 希望给予Rust的语言优势，通过良好的架构设计、编码实现来达到高性能的目的。从落地来看，基于 Rust 构建的消息流引擎Iggy，它号称耗时可以到纳秒级别。这也证明了该语言的选择优势。
+因此，RobustMQ 希望基于 Rust 的语言优势，通过良好的架构设计、编码实现来达到高性能的目的。从落地来看，基于 Rust 构建的消息流引擎Iggy，它号称耗时可以到纳秒级别。这也证明了该语言的选择优势。
 
-第二个关键字是Serverless。随着云技术、K8s/Docker、云盘、分布式存储（比如云对象存储，MinIo）的普及，业务数据量的膨胀、波峰波谷差异变大、对成本诉求的增高。传统消息队列如Kafka、RocketMQ、RabbitMQ 存算一体 + 本地存储的系统架构导致其无法真正利用到云和K8s技术优势。无法做到真正的按需使用，弹性扩缩容。因此 Pulsar 基于Apache Bookkeeper 构建了存算分离的架构。希望通过存算分离的架构来解决传统消息队列无法弹性扩缩容的问题。这个设计理念在当时（19年左右）消息队列这个领域，是一个非常棒的创新和参考，是一个对的方向，值得参考和借鉴。
+第二个关键字是 Serverless。随着云技术、K8s/Docker、云盘、分布式存储（比如云对象存储，MinIo）的普及，业务数据量的膨胀、波峰波谷差异变大、对成本诉求的增高。传统消息队列如Kafka、RocketMQ、RabbitMQ 存算一体 + 本地存储的系统架构导致其无法真正利用到云和K8s技术优势。无法做到真正的按需使用，弹性扩缩容。因此 Pulsar 基于Apache Bookkeeper 构建了存算分离的架构。希望通过存算分离的架构来解决传统消息队列无法弹性扩缩容的问题。这个设计理念在当时（19年左右）消息队列这个领域，是一个非常棒的创新和参考，是一个对的方向，值得参考和借鉴。
 
 因此，在第一步，RobustMQ 的架构定义的是存算分离的架构。
 
 第三个关键字是插件化存储。类比Pulsar 使用Bookeeper 作为存储引擎，现在业界的消息队列的一个技术趋势是使用分布式存储（比如云对象存储、数据湖，HDFS）来作为消息队列底层的存储引擎。从而达到存算分离 + 存储降本的作用。这种技术路线的优势是即利用了当前公有云架构的优势，大大降低了自身开发存储层的工作量和数据存储成本。但是它带来的问题是：
-1. 读写性能的下降（虽然业界有一些提升性能的思路，比如本地高性能盘预热数据、WAL等等），但是毋庸置疑的是，这个技术路线带来的第一个问题是性能无法达到极致。因此这个技术路线它是满足的是数据量大，对成本要求高、延时不敏感的业务场景。但是在很多场景中（比如金融场景），业务对消息队列的延时需求是稳定的10毫秒级，甚至更低。比如也是基于Rust 构建的消息流引擎Iggy，它号称耗时可以到纳秒级别。
+1. 读写性能的下降（虽然业界有一些提升性能的思路，比如本地高性能盘预热数据、WAL等等），但是毋庸置疑的是，这个技术路线带来的第一个问题是性能无法达到极致。因此这个技术路线它是满足的是数据量大，对成本要求高、延时不敏感的业务场景。但是在很多场景中（比如金融场景），业务对消息队列的延时需求是稳定的10毫秒级，甚至更低。
 2. 不是所有业务都允许使用云服务，在很多场景中，数据都有本地存储的需求。在这种场景下，该技术路线是无法满足的。
 
 而RobustMQ 希望能够打造一个满足各个场景的消息队列，既能解决成本、也能解决性能、多部署场景的需求。因此RobustMQ 将存储层设计为可插拔的。并内置了内存、本地分段多副本存储、远程分布式存储（对象存储、HDFS等）。业务可以根据需求在集群、Topic 维度选择存储引擎。去满足各种场景。
