--- a/docs/zh/Blogs/03.md
+++ b/docs/zh/Blogs/03.md
@@ -1,6 +1,8 @@
-# 介绍RobustMQ 的节点Roles
+# 介绍 RobustMQ 的 Roles
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
+
+本文主要介绍部署RobustMQ 的关键概念 Roles。
 
 ### 一个二进制
 RobustMQ 的安装包是由 Rust 代码打包而成的二进制文件，没有任何外部依赖。可以下载二进制安装包执行文件。
@@ -80,8 +82,9 @@ roles = ["meta", "broker","journal"]
 ```
 roles = ["meta", "broker","journal"]
 ```
+
 ### 关于集群中不同role的节点数量
-1. meta 底层是基于 raft 构建的，所以它的节点数量最好是基数，且最小节点数最好大于3，才有更好的容灾能力。
+1. meta 底层是基于 raft 构建的，所以它的节点数量可以是1，最好是奇数且最小节点数最好大于3，才有更好的容灾能力。
 2. broker 的数量不限制，只要能够满足业务需求即可。最小一个
 3. journal 不是强制部署，只有存储类型是本地持久化存储才需要部署journal。数量最好大于2，因为数据存储最小双副本。以保证数据的可靠性。
 
