--- a/docs/zh/Blogs/01.md
+++ b/docs/zh/Blogs/01.md
@@ -1,4 +1,4 @@
-# RobustMQ：用 Rust 重新定义云原生消息队列的未来
+# 01:RobustMQ：用 Rust 重新定义云原生消息队列的未来
 
 <p align="center">
   <img src="../../images/robustmq-logo.png" alt="RobustMQ Logo" width="300">
