--- a/docs/zh/Blogs/03.md
+++ b/docs/zh/Blogs/03.md
@@ -5,7 +5,8 @@
 本文主要介绍部署RobustMQ 的关键概念 Roles。
 
 ### 一个二进制
-RobustMQ 的安装包是由 Rust 代码打包而成的二进制文件，没有任何外部依赖。可以下载二进制安装包执行文件。
+RobustMQ 的安装包是由 Rust 代码打包而成的二进制文件，没有任何外部依赖。只需要一个二进制就可以拉起集群，可以通过下载二进制安装包执行文件，拉起集群。
+
 ```
 $ wget https://github.com/robustmq/robustmq/releases/download/v0.1.33/robustmq-v0.1.33-linux-amd64.tar.gz
 $ tar -xzvf robustmq-v0.1.33-linux-amd64.tar.gz
