--- a/docs/zh/Blogs/04.md
+++ b/docs/zh/Blogs/04.md
@@ -1,25 +1,23 @@
-# 04: RobustMQ 整体架构概述
+# 04: 聊聊 RobustMQ 在产品层面的思考
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
 
-在[《RobustMQ: 技术设计理念综述》](02.md)中讲述了RobustMQ 的核心技术思想。它有六个特点：高性能、Serverless、插件式存储、极简高内聚架构、 计算/存储/调度分离、多协议。本文我们将会详细讲解 RobustMQ 整体架构的设计实现。
+从开始写 RobustMQ 的第一天开始，我们就一直在思考自己有没有陷入在技术思维茧房，在做一件没有实际业务需求的事情，是不是在技术自嗨。而在 RobustMQ 的这两年里，我们也受到了很多质疑。觉得我们“在造一个新的轮子”，“又一个消息队列”，”消息队列太成熟了，没有增量，这个领域一点都不性感“，“我们的设想太宏大了，太难了”。
 
-在[《介绍 RobustMQ 的 Roles》](./03.md) 中我们知道了节点Role的概念。接下来我们将会详细介绍一下RobustMQ的整体架构。
+我们知道，如果方向错了，再努力都没用，所以本文我们想从产品思维的角度来聊一聊我们的思考。
 
-### 架构概述
-RobustMQ 整体由 Meta Service、Broker Server、Storage Adapter、Journal Server四部分组成。
-- Meta Service：元数据和调度层，负责集群的元数据存储和调度。主要完成:
-  - Broker 和 Journal 集群相关的元数据(Topic、Group、Queue、Partition 等)存储、分发。
-  - Broker 和 Journal 集群的控制、调度，比如集群节点的上下线、配置存储/分发等。
-- Broker Server：消息队列逻辑处理层，负责不同消息队列协议的解析和逻辑处理。主要完成：
-  - 解析MQTT、Kafka、AMQP、RocketMQ 等协议的解析
-  - 整合、抽象不同协议通用的逻辑, 处理不同协议的不同消息队列逻辑。以兼容适配不同的消息队列。
-- Storage Adapter：存储适配层，存储适配层会将多种 MQ 协议中的 Topic/Queue/Partition 统一抽象为 Shard。同时适配不同的底层存储引擎（比如本地文件存储、远程的HDFS、对象存储、自研的存储组件等等），从而实现存储适配层的插件化、可插拔。
-- Journal Server：是内置的本地多副本、分段式、持久存储服务。它可以类比为 Bookeeper 对于Pulsar。Kafka Segment 对于 Kafka 。它目标是构建一个高性能、高吞吐、高可靠的持久化存储引擎，类似Bookeeper。它是为了解决高内聚的特性，让 RobustMQ 可以在不依赖任何外部组件的情况下提供高性能、高可靠的服务。
+### 产品定位
 
+RobustMQ 是一个标准的消息队列，也只是消息队列。产品定位上它和RocketMQ、Kafka、Pulsar、RabbitMQ 是一样的。在未来的某一天，我们希望社区中谈到消息队列演进的时候可以是：RabbitMQ -> Kafka -> RocketMQ -> Pulsar -> RobustMQ。
 
-### 详细架构
-先来看下图：
-![image](../../images/robustmq-architecture.png)
+因此来说，它的产品定位是很清晰的。我们认为在未来某一天，如果你需要消息队列，你的选项清单里面就必定会有RobustMQ。那它和现有的消息队列有什么区别呢？为什么会选它呢？
 
-如上图所示，这是一个由三个节点组成的 RobustMQ 集群。
+### 为什么要选RobustMQ
+我们希望你的选RobustMQ的理由会是：
+1. 它很快、很稳定、性能很高
+2. 它可以兼容多种
+
+### 两种群体
+消息队列做为一个基础软件，它其实是一个
+
+### 我们的第一步：MQTT
