--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -2,15 +2,11 @@
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
 
-RobustMQ 是在23年10月开始敲下第一行代码的。在开始的第一年，它是个人学习 Rust 这门有意思语言的的作品。
+RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化项目，也没有这方面的想法，大家都有自己的工作，也都很忙。都是对rust 这门语言、对技术感兴趣才聚到一起。很遗憾，过了两年，还没有一个正式版本出来。
 
-虽然它一直在Github 上，但严格来说它正式跟大家见面应该是24年9月份的Rust Conf China 2024。到了今天，很快又过了一年。这一年发生了好多好多好多好多好多事啊，很高兴我们坚持下来了。
+在开始的第一年，它是个人学习 Rust 这门有意思语言的的作品。虽然它一直在Github 上，但严格来说它正式跟大家见面应该是24年9月份的Rust Conf China 2024。到了今天，很快又过了一年。这一年发生了好多好多好多好多好多事啊，很高兴我们坚持下来了.
 
-这不是一个商业化项目，也没有这方面的想法，大家都有自己的工作，也都很忙。都是对rust 这门语言、对技术感兴趣才聚到一起。很遗憾，过了两年，还没有一个正式版本出来。
-
-我们是在今年8月29号建的公众号，那天只有我自己关注了这个号，也就是只有自己一个粉丝~~ 哈哈哈哈。
-
-本来想着玩一下，想着趁着写公众号的时候总结一下这两年沉淀下来的东西，讲清楚我们想做什么，在做什么，想做成什么样子，是怎么思考的。没想到发了两篇公众文章后，引起了大家了关注，好多好多人关注我们的项目和进我们的开发群啊。期间大家在公众号，在群里也提了很多疑问、质疑。突然感受到了好大的压力，所以想写这篇文章跟大家聊聊我的想法。
+我们是在今年8月29号建的公众号，那天只有我自己关注了这个号，也就是只有自己一个粉丝~~ 哈哈哈哈。本来想着玩一下，想着趁着写公众号的时候总结一下这两年沉淀下来的东西，讲清楚我们想做什么，在做什么，想做成什么样子，是怎么思考的。没想到发了两篇公众文章后，引起了大家了关注，好多好多人关注我们的项目和进我们的开发群啊。期间大家在公众号，在群里也提了很多疑问、质疑。突然感受到了好大的压力,所以想写这篇文章跟大家聊聊我的想法。
 
 ### 这是一个创业项目吗
 很多人会问这个问题。我们答案从来都是：No，正如我们官网说的：“这个是技术自嗨型的社区项目。最终目标是打造一个超棒的消息队列组件，然后进入 Apache 基金会。然后就很装B。哈哈哈哈"。到今天，以后，这个想法都不会变吧~。
