--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -2,7 +2,7 @@
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
 
-RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化项目，也没有这方面的想法，大家都有自己的工作，也都很忙。都是对rust 这门语言、对技术感兴趣才聚到一起。很遗憾，过了两年，还没有一个正式版本出来。
+RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化项目，也没有这方面的想法，大家都有自己的工作，也都很忙。都是对rust 这门语言、对技术感兴趣才聚到一起。很遗憾，过了两年，还没有一个正式版本出来。我们原先预计在10月份出我们的0.2.0版本，这是我们的第一个RELEASE版本。会完整支持 MQTT协议。
 
 在开始的第一年，它是个人学习 Rust 这门有意思语言的的作品。虽然它一直在Github 上，但严格来说它正式跟大家见面应该是24年9月份的Rust Conf China 2024。到了今天，很快又过了一年。这一年发生了好多好多好多好多好多事啊，很高兴我们坚持下来了.
 
