--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -8,7 +8,7 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 
 我们是在今年8月29号建的公众号，也就十几天。那天心血来潮，就搞了这么个号，那天也只有我自己关注了这个号，也就是只有自己一个粉丝~~ 哈哈哈哈。本来想着玩一下，想着趁着写公众号的时候总结一下这两年沉淀下来的东西，讲清楚我们想做什么，在做什么，想做成什么样子，是怎么思考的。
 
-没想到发了两篇公众文章后，引起了大家了关注，好多好多人关注我们的项目和进我们的开发群啊。期间大家在公众号，在群里也提了很多疑问、质疑。突然感受到了好大的压力,所以想写这篇文章跟大家聊聊我的想法。
+没想到发了两篇公众文章后，引起了大家了关注，好多好多人关注我们的项目和进我们的开发群啊。期间大家在公众号，在群里也提了很多疑问、质疑。突然感受到了好大的压力,所以想写这篇文章跟大家聊聊我们的想法，顺便解答一下大家的疑问。
 
 ### 这是一个创业项目吗
 很多人会问这个问题。我们答案从来都是：No，正如我们官网说的：“这个是技术自嗨型的社区项目。最终目标是打造一个超棒的消息队列组件，然后进入 Apache 基金会。然后就很装B。哈哈哈哈"。到今天，以后，这个想法都不会变吧~。
