--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -14,7 +14,7 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 很多人会问这个问题。我们答案从来都是：No，正如我们官网说的：“这个是技术自嗨型的社区项目。最终目标是打造一个超棒的消息队列组件，然后进入 Apache 基金会。然后就很装B。哈哈哈哈"。到今天，以后，这个想法都不会变吧~。
 
 ### 和主流消息队列、新兴消息队列有什么区别
-大家会问，和 Pulsar 好像，和RedPanda、Nats、IGGY 有什么区别。我们在官网放了一些文章阐述我们的愿景、特点、以及和其他产品的区别，试图讲清楚我们在做什么，想做什么、有什么特点，优势是什么。
+大家会问，和 Pulsar 好像，和RedPanda、Nats、IGGY 有什么区别, Kafka 好牛逼，能做的比它好吗。我们在官网放了一些文章阐述我们的愿景、特点、以及和其他产品的区别，试图讲清楚我们在做什么，想做什么、有什么特点，优势是什么。
 
 相信我们，我们很了解很了解消息队列这个领域（比如大家可以看一下这个PPT：https://docs.qq.com/slide/DSE9yYUNHVFRHVFBi?nlc=1 ）。当你真正去了解我们项目、详细看我们的资料后，你自然会得到答案。答案就是：有很大区别的。
 
