--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -16,7 +16,7 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 ### 和主流消息队列、新兴消息队列有什么区别
 大家会问，和 Pulsar 好像，和RedPanda、Nats、IGGY 有什么区别, Kafka 好牛逼，能做的比它好吗。我们在官网放了一些文章阐述我们的愿景、特点、以及和其他产品的区别，试图讲清楚我们在做什么，想做什么、有什么特点，优势是什么。
 
-相信我们，我们很了解很了解消息队列这个领域（比如大家可以看一下这个PPT：https://docs.qq.com/slide/DSE9yYUNHVFRHVFBi?nlc=1 ）。当你真正去了解我们项目、详细看我们的资料后，你自然会得到答案。答案就是：有很大区别的。
+相信我们，我们很了解很了解消息队列这个领域。如果你真正去深入了解我们项目、详细看我们的资料后，你自然会得到答案。答案就是：有很大区别的。
 
 ### 关于愿景和开发进度
 大家看到我们的第一印象是，牛B吹得好大啊。我们想的很简单，我们不想吹牛逼，只想做一个能解决很多问题的All In One的消息队列，我们会认为业界需要这个作品。愿景嘛，我们理解越大越好~~。红红火火恍恍惚惚哈哈哈哈
