--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -19,7 +19,7 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 相信我们，我们很了解很了解消息队列这个领域。如果你真正去深入了解我们项目、详细看我们的资料后，你自然会得到答案。答案就是：有很大区别的。
 
 ### 关于愿景和开发进度
-大家看到我们的第一印象是，牛B吹得好大啊。我们想的很简单，我们不想吹牛逼，只想做一个能解决很多问题的All In One的消息队列，我们会认为业界需要这个作品。愿景嘛，我们理解越大越好~~。红红火火恍恍惚惚哈哈哈哈
+大家看到我们的第一印象是，牛B吹得好大啊。我们想的也很简单，不想吹牛逼，只想做一个能解决很多问题的 All In One的消息队列，我们会认为业界需要这个作品。愿景嘛，我们理解越大越好~~~红红火火恍恍惚惚哈哈哈哈~
 
 然后会问现在什么进度了？能用了吗？ 目前生产环境不能用，刚完成 MQTT 协议的核心能力开发。预计会在10月份发布RobustMQ MQTT第一个 Release 版本。但是整体代码结构、系统架构我们已经经过了很多轮的重构，已经稳定下来了。接下来的开发进度会提升很多。无需再进行大的重构。
 
