--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -24,10 +24,12 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 然后会问现在什么进度了？能用了吗？ 目前生产环境不能用，刚完成 MQTT 协议的核心能力开发。预计会在10月份发布RobustMQ MQTT第一个 Release 版本。但是整体代码结构、系统架构我们已经经过了很多轮的重构，已经稳定下来了。接下来的开发进度会提升很多。无需再进行大的重构。
 
 ### 进度好像不快
-我们觉得有几个原因：
+关于进度原因，其实我们一直想让自己慢下来，慢下来思考要做什么，怎么做，做成什么样。期间我们一直在重写、重构我们的代码，就为了以后的多协议兼容、插件化存储打下基础，不用一直需要进行大的重构。
+
+所以我觉得大家觉得进度慢，我们会认为有下面几个原因：
 1. 我们的开发者都有自己的工作，没法全力投入
 2. 我们挺缺人的，主要是Rust 和前端开发人员
-3. 我们希望整个基础很扎实，以免后续一直需要进行大的重构。所以在前期我们一直在调整我们的架构和代码。为了为以后的多协议兼容、插件化存储打下基础。
+3. 我们希望整个基础很扎实所以在前期我们一直在调整我们的架构和代码。
 
 另外，我们觉得我们的进度还行。整体架构和代码结构、MQTT 协议、命令行工具、Dashboard 都初具雏形。官网、官网文档、公众号也有了。我们特别欢迎有人参与我们，不管你是新手还是大佬，只要你表达你愿意参加的意愿，我们都非常开心。我们欢迎任何对我们有兴趣的人来参与我们。拥抱你们~。
 
