--- a/docs/zh/Blogs/07.md
+++ b/docs/zh/Blogs/07.md
@@ -42,7 +42,7 @@ RobustMQ 是在23年10月开始敲下第一行代码的.这不是一个商业化
 我们想认识很多人，认识很多对我们感兴趣的人。然后低头做事，一直一直不停地继续Coding。然后期待某一天有一个很酷的作品。
 
 ### 很高兴有机会让你看到不一样的作品
-我们还想说，真的很高兴有机会让你看到一个不一样的作品。我们从不想拉踩同类产品，我们只想做我们自己。我们几乎了解业界所有Message Middleware的作品，参考了很多他们的优势，所以你会觉得很像。我们感恩整个开源社区，感恩前辈，感恩有这么多优秀的作品让我们参考，学习。
+我们还想说，真的很高兴有机会让你看到一个不一样的作品。我们从不想拉踩同类产品，我们只想做我们自己。我们几乎了解业界所有Message Middleware 作品，参考了很多他们的优势，所以你会觉得很像。我们感恩整个开源社区，感恩前辈，感恩有这么多优秀的作品让我们参考，学习。
 
 这两年过来，我们发现我们的愿景、架构都一直在变化、调整。我相信，今天的愿景、架构不会是我们的终点。
 
