--- a/docs/zh/Blogs/05.md
+++ b/docs/zh/Blogs/05.md
@@ -2,3 +2,29 @@
 
 > RobustMQ 是基于 Rust 构建的新一代高性能多协议消息队列。愿景是成为新一代云原生与 AI 原生消息基础设施。它不是简单的"又一个消息队列"，而是面向AI时代和云原生需求，对消息队列进行的一次重新思考和设计。
 
+这篇文章想讲一下在我们的设想中，从业务团队的视角出发，在哪些场景中会用到 RobustMQ。
+
+### MQTT Broker 
+在 https://mqtt.org/software/ 上几乎列了所有业界的MQTT Broker。当时当你真正要用的时候。你会发现，大部分是商业化产品，即使开源，也是分商业版和开源版，两者能力相差巨大。而真正具备完整MQTT 能力的开源Broker 几乎没有。
+
+所以此时在我们的设想中，RobustMQ 会是一个完整的开源的 MQTT Broker。如果大家需要MQTT Broker，那么它将会是这个赛道的最好的选择。在能力上，我们希望它：
+1. 它完整支持 MQTT 3/4/5 所有协议，所有特性。比如遗嘱消息、保留消息，延时投递等等。
+2. 它支持集群化部署，每个节点都是无状态的，横向扩展节点无损耗，不会对集群造成大的负担，理论上可以无限扩展。
+3. 它单机允许支持大量连接（比如几十万、百万？）。我们有信心依托rust的优势，我们的架构和编码实现达到这个目标，把性能优化到极致
+4. 它支持多种数据存储方式，比如直接投递、内存、持久化。可满足多种场景下的数据存储需求。
+5. 它支持丰富的数据桥接能力。允许将数据通过数据桥接的能力将数据导入到下游各种引擎。
+6. 它支持规则引擎、Schema等等高级能力，能满足你的各种需求。
+7. 它有完整齐备的Dashboard、命令行工具，HTTP API。
+8. 它的具有完整的基础设施能力，比如指标、监控、日志、Trace。支持接入Grafana、Prometheus，支持K8s、Docker部署等等。
+
+在我们设计的最开始，我们希望它的能力完全对齐并超越 EMQX。因此，如果你需要MQTT Broker，RobustMQ MQTT 将会是你最好的选择。
+
+
+
+### AMQP Broker
+
+
+### Kafka Broker
+
+
+### ALL
