--- a/docs/zh/Blogs/06.md
+++ b/docs/zh/Blogs/06.md
@@ -7,19 +7,22 @@
 在[《介绍 RobustMQ 的 Roles》](./03.md) 中我们知道了节点Role的概念。接下来我们将会详细介绍一下RobustMQ的整体架构。
 
 ### 架构概述
-RobustMQ 整体由 Meta Service、Broker Server、Storage Adapter、Journal Server四部分组成。
-- Meta Service：元数据和调度层，负责集群的元数据存储和调度。主要完成:
-  - Broker 和 Journal 集群相关的元数据(Topic、Group、Queue、Partition 等)存储、分发。
-  - Broker 和 Journal 集群的控制、调度，比如集群节点的上下线、配置存储/分发等。
-- Broker Server：消息队列逻辑处理层，负责不同消息队列协议的解析和逻辑处理。主要完成：
-  - 解析MQTT、Kafka、AMQP、RocketMQ 等协议的解析
-  - 整合、抽象不同协议通用的逻辑, 处理不同协议的不同消息队列逻辑。以兼容适配不同的消息队列。
-- Storage Adapter：存储适配层，存储适配层会将多种 MQ 协议中的 Topic/Queue/Partition 统一抽象为 Shard。同时适配不同的底层存储引擎（比如本地文件存储、远程的HDFS、对象存储、自研的存储组件等等），从而实现存储适配层的插件化、可插拔。
-- Journal Server：是内置的本地多副本、分段式、持久存储服务。它可以类比为 Bookeeper 对于Pulsar。Kafka Segment 对于 Kafka 。它目标是构建一个高性能、高吞吐、高可靠的持久化存储引擎，类似Bookeeper。它是为了解决高内聚的特性，让 RobustMQ 可以在不依赖任何外部组件的情况下提供高性能、高可靠的服务。
+RobustMQ 整体由 Meta Service、Broker Server、Storage Adapter、Journal Server、数据存储层五部分组成。
+  1. Meta Service：元数据和调度层，负责集群的元数据存储和调度。主要完成:
+     - Broker 和 Journal 集群相关的元数据(Topic、Group、Queue、Partition 等)存储、分发。
+     - Broker 和 Journal 集群的控制、调度，比如集群节点的上下线、配置存储/分发等。
+  2. Broker Server：消息队列逻辑处理层，负责不同消息队列协议的解析和逻辑处理。主要完成：
+     - 解析MQTT、Kafka、AMQP、RocketMQ 等协议的解析
+     - 整合、抽象不同协议通用的逻辑, 处理不同协议的不同消息队列逻辑。以兼容适配不同的消息队列。
+  3. Storage Adapter：存储适配层，存储适配层会将多种 MQ 协议中的 Topic/Queue/Partition 统一抽象为 Shard。同时适配不同的底层存储引擎（比如本地文件存储：Journal Server、远程的HDFS、对象存储、自研的存储组件等等），从而实现存储适配层的插件化、可插拔。也就是说，Storage Adapter会根据配置，将数据存储到不同的存储引擎。
+  4. Journal Server：是 RobustMQ 自带的持久化存储引擎。它是一个类似Apache Bookeeper 的本地多副本、分段式、持久化存储服务。它目标是构建一个高性能、高吞吐、高可靠的持久化存储引擎。从Storage Adapter的视角看，Journal Server 只是它对接的存储引擎之一。你可以理解它是为了解决RobustMQM 高内聚 、无外部依赖的特性而特意实现的。
+  5. 数据存储层（本地 Or 远程存储）： 指数据的存储层。数据的存储层可以是（本机的内存），也可以是远程存储服务（比如HDFS、 MinIO、Aws S3等）。它由 Storage Adapter负责对接。
 
 
 ### 详细架构
 先来看下图：
 ![image](../../images/robustmq-architecture.png)
 
-如上图所示，这是一个由三个节点组成的 RobustMQ 集群。
+如上图所示，这是一个由三个RobustMQ Node组成的集群，如果不选择使用外部的存储引擎，则不需要依赖任何外部组件。也就是说，可以通过./bin/robust-server start 启动每个节点。
+
+从单节点来看，由Meta Service
