--- a/docs/zh/Blogs/03.md
+++ b/docs/zh/Blogs/03.md
@@ -57,18 +57,20 @@ $ tree
 - broker：计算节点
 - journal： 存储节点
 
-#### 启动一个内存存储的单节点集群
-如下所示：
-![image](../../images/01.png)
+也就是说，可以通过 roles 这个配置指定当前节点是什么角色。下面我们配置不同的roles，来启动不同的Node。
 
-roles 配置如下：
+#### 内存存储的单节点
+先来启动一个依赖内存存储的单节点RobustMQ，roles 配置如下：
 ```
 roles = ["meta", "broker"]
 ```
+架构图如下：
+![image](../../images/01.png)
 
-因为集群中必须有元数据节点和Broker节点，因此一定需要有meta和broker，可以没有journal。
+也就说，这个节点依赖meta service、broker server， 内存存储启动。因为集群中必须有元数据节点和Broker节点，因此一定需要有meta和broker，可以没有journal。
 
-#### 启动一个本地存储的单节点集群
+#### 本地存储的单节点
+
 如下所示：
 ![image](../../images/02.png)
 roles 配置如下：
