--- a/docs/zh/Observability/基础设施指标.md
+++ b/docs/zh/Observability/基础设施指标.md
@@ -147,7 +147,7 @@ scrape_configs:
 
 ### Grafana 查询示例
 
-```promql
+```text
 # 平均请求处理时间
 rate(request_total_ms_sum[5m]) / rate(request_total_ms_count[5m])
 
