--- a/docs/zh/Blogs/08.md
+++ b/docs/zh/Blogs/08.md
@@ -10,8 +10,8 @@
 
 这两年来，我们一直在问自己：我们到底在做什么？我们做的东西有价值吗？会不会只是在技术自嗨？特别是当看到那么多成熟的消息队列产品时，我们也会怀疑，真的需要"又一个消息队列"吗？但是今天，我们觉得我们还是想试试，想看一下能不能走的更远。
 
-在我们的这个第一个RELEASE版本中，：
-1. 基本确定了自己的系统和代码架构。并完成了架构中的基础模块，比如网络模块、插件化存储、可观测体系、安全体系等通用部分的开发。
+在我们的这个第一个RELEASE 版本中，：
+1. 基本确定了系统和代码架构。并完成了架构中的基础模块，比如网络模块、插件化存储、可观测体系、安全体系等通用部分的开发。
 2. 协议方面完整支持了MQTT3/4/5协议。
 3. 支持了Dashboard 管理页面、Command命令行工具、HTTP API接口等能力。
    
@@ -27,21 +27,19 @@
 - **MQTT5高级特性**：完整的遗嘱消息、保留消息、共享订阅、自动订阅、延迟发布、排它订阅、Session持久化、离线消息等等高级特性。
 - **数据桥接**：支持数据导入到下游的Kafka、Pulsar等消息引擎。
 
-
-
 ### 不只是协议，我们还有完整的生态工具
 
 一个好的消息队列，光有协议支持是不够的。我们还需要好用的管理工具、监控界面、命令行工具。所以在 0.2.0 版本中，我们还提供了：
 
 #### 🎛️ Dashboard 管理界面
-我们有一个超级漂亮的 Web 管理界面！可以：
+我们有一个漂亮的 Web 管理界面！可以：
 - 实时监控集群状态和性能指标
 - 管理 Topic、订阅、客户端连接
 - 查看消息流量和系统资源使用情况
 - 配置集群参数和存储引擎
 
 #### 🔧 Command 命令行工具
-对于喜欢命令行的同学，我们提供了功能完整的 CLI 工具：
+同时我们提供了 CLI 工具：
 ```bash
 # 查看集群状态
 robustmq-cli cluster status
@@ -55,8 +53,6 @@ robustmq-cli client list
 # 发送测试消息
 robustmq-cli message publish --topic test --payload "Hello RobustMQ!"
 ```
-
-命令行工具支持所有的管理操作，而且输出格式友好，支持 JSON、表格等多种格式。运维同学应该会喜欢的！
 
 #### 🌐 HTTP API 接口
 我们还提供了完整的 RESTful API，方便集成到现有的运维系统中：
