--- a/docs/zh/Blogs/08.md
+++ b/docs/zh/Blogs/08.md
@@ -60,31 +60,31 @@
 
 提供功能完整的 CLI 工具：
 ```bash
-# 查看集群状态
-robustmq-cli cluster status
+# 查看集群配置
+robust-ctl cluster config get
 
-# 创建 Topic
-robustmq-cli topic create --name my-topic --partitions 3
+# 查看 Topic 列表
+robust-ctl mqtt topic list
 
 # 查看客户端连接
-robustmq-cli client list
+robust-ctl mqtt client list
 
 # 发送测试消息
-robustmq-cli message publish --topic test --payload "Hello RobustMQ!"
+robust-ctl mqtt publish --topic test --payload "Hello RobustMQ!"
 ```
 
 #### 🌐 HTTP API 接口
 
 提供完整的 RESTful API，方便集成到现有的运维系统：
 ```bash
-# 获取集群信息
-GET /api/v1/cluster/info
+# 获取集群配置
+POST /api/cluster/config/get
 
-# 创建 Topic
-POST /api/v1/topics
+# 查看 Topic 列表
+POST /api/mqtt/topic/list
 
-# 查看消息统计
-GET /api/v1/metrics/messages
+# 查看 MQTT 概览信息
+GET /api/mqtt/overview
 ```
 
 API 文档详细完整，包含请求示例和响应格式说明。
